# dash

./: ..gitignore.swp  .gitignore  Cargo.toml
migrations/2022-03-13-211044_create_cards/: down.sql  up.sql
src/: main.rs  schema.rs
src/entity/: category.rs  mod.rs  person.rs  prelude.rs  service.rs  service_categories.rs  user_categories.rs
templates/: base.html.tera  index.html.tera  login.html.tera
