[package]
name = "dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.1"
dotenv = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.5.11", features = ["runtime-tokio-rustls", "any", "postgres"]}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tera = "1.0"
#oauth2 = "4.1"
#async-session = "3.0.0"
# Use Rustls because it makes it easier to cross-compile on CI
#reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
#headers = "0.3"
#http = "0.2"
