[package]
name = "dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["tera"]}
reqwest = {version = "0.11.10"}
rocket_oauth2 = "0.5.0-rc.1"
dotenv = "0.15.0"
